--- a/assets/section-faq.css
+++ b/assets/section-faq.css
@@ -52,7 +52,7 @@
   font-style: normal;
   font-weight: normal;
   line-height: 150%;
-  text-align: justify;
+  text-align: start;
   color: #242424;
   margin-bottom: 0;
   display: none;
