--- a/assets/section-feeling.css
+++ b/assets/section-feeling.css
@@ -117,7 +117,7 @@ margin-bottom:15px;
 .feeling-text{
   font-size: 22px;
   margin-bottom: 70px;
-  text-align: justify;
+  text-align: start;
 }
 .icon-wrapper{
   width: 40px;
