--- a/assets/section-expectations.css
+++ b/assets/section-expectations.css
@@ -94,7 +94,7 @@ color: #6E6D6D;
   .expectations-text{
     font-size: 16px;
     margin-bottom: 30px;
-    text-align: justify;
+    text-align: start;
   }
   .expectation-icon-grid {
     display: grid;
