--- a/assets/section-transformation.css
+++ b/assets/section-transformation.css
@@ -180,12 +180,12 @@ margin-right: 20px;
     align-items: center;
     justify-content: space-between;
   }
-  .beforeImage{
+  /* .beforeImage{
     display:none;
   }
   .resizer{
     display: none!important;
-  }
+  } */
 }
 @media screen and (min-width:1211px){
   .slider-overlay{
