--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -17,7 +17,7 @@
   <link id="ModelViewerStyle" rel="stylesheet" href="https://cdn.shopify.com/shopifycloud/model-viewer-ui/assets/v1.0/model-viewer-ui.css" media="print" onload="this.media='all'">
   <link id="ModelViewerOverride" rel="stylesheet" href="{{ 'component-model-viewer-ui.css' | asset_url }}" media="print" onload="this.media='all'">
 {%- endif -%}
-<div class="giftcards-wrapper"style="margin-top:100px">
+<div class="giftcards-title-wrapper">
 <h2 class="giftcards-title">
   GIVE GREAT CUT AND BIG SMILE TO YOUR FRIEND
 </h2>
