--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -13,7 +13,7 @@
   
   <div class="frame-container">
     <video id="bannerVid" muted autoplay loop>
-      <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" >
+      <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" >
     </video>    
   </div>
   
