--- a/assets/base.css
+++ b/assets/base.css
@@ -230,14 +230,16 @@ html.no-js .no-js-hidden {
   }
 
   .spaced-section {
-    margin-top: calc(5rem + var(--page-width-margin));
+    margin-top: 150px;
   }
 
   .spaced-section:last-child {
     margin-bottom: calc(5rem + var(--page-width-margin));
   }
 }
-
+.product-section{
+  margin-top: 0;
+}
 .spaced-section--full-width + .spaced-section--full-width {
   margin-top: 0;
 }
