--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -3,7 +3,13 @@
   justify-content: center;
   background-color: #FAFAFA;
 }
-
+.giftcards-title-wrapper{
+  display: flex;
+  justify-content: center;
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
 
 
 
@@ -217,6 +223,11 @@ option:last-child {
   .giftcards-wrapper{
     padding:40px 20px 40px 20px;
     
+  }
+  .giftcards-title-wrapper{
+    padding:40px 20px 40px 20px;
+    margin-bottom: 40px;
+    margin-top: 15px;
   }
   .giftcards-container{
     max-width: 1160px;
