--- a/sections/main-barbers.liquid
+++ b/sections/main-barbers.liquid
@@ -5,7 +5,7 @@
   <div class="barbers-grid">
     {%- for article in blog.articles -%}
         <div class="article-card">
-          {%- render 'article-barber', article: article, image_height: "medium", show_date: section.settings.show_date, show_author: section.settings.show_author -%}
+          {%- render 'article-barber', article: article, image_height: "208px" -%}
         </div>
       {%- endfor -%}
   </div>
