--- a/assets/section-contact-info.css
+++ b/assets/section-contact-info.css
@@ -72,6 +72,7 @@
   grid-template-rows: auto auto;
   grid-column-gap: 40px;
   grid-row-gap: 0px;
+  align-items: center;
 }
   
   .contact-div1 {
@@ -85,11 +86,13 @@
      display: flex;
      align-items: flex-end;
      border-right: 1px solid #E8E8E8;
+     height: fit-content;
      }
   .contact-div4 {
      grid-area: 2 / 3 / 3 / 4;
      display: flex;
      align-items: flex-end;
+     height: fit-content;
      }
 .info-icon{
   width: 40px;
