--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -30,23 +30,23 @@
       
         <div class="slide-preview-row">
           <div class="slide-preview">
-            <img class="slide-preview-image opacity-off" src="{{'background.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(1)">
+            <img class="slide-preview-image opacity-off" src="{{'product1.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(1)">
           </div>
           <div class="slide-preview">
-            <img class="slide-preview-image" src="{{'foreground.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(2)">
+            <img class="slide-preview-image" src="{{'product2.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(2)">
           </div>
           <div class="slide-preview">
-            <img class="slide-preview-image" src="{{'background1.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(3)">
+            <img class="slide-preview-image" src="{{'product3.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(3)">
           </div>
           <div class="slide-preview">
-            <img class="slide-preview-image" src="{{'foreground1.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(4)">
+            <img class="slide-preview-image" src="{{'product4.jpg'| asset_url}}" style="cursor:pointer" onclick="currentDiv(4)">
           </div>
         </div>
         <div style="position: relative;">
-          <img class="mySlides" src="{{'background.jpg'| asset_url}}" >
-          <img class="mySlides" src="{{'foreground.jpg'| asset_url}}" style="display:none">
-          <img class="mySlides" src="{{'background1.jpg'| asset_url}}" style="display:none">
-          <img class="mySlides" src="{{'foreground1.jpg'| asset_url}}" style="display:none">
+          <img class="mySlides" src="{{'product1.jpg'| asset_url}}" >
+          <img class="mySlides" src="{{'product2.jpg'| asset_url}}" style="display:none">
+          <img class="mySlides" src="{{'product3.jpg'| asset_url}}" style="display:none">
+          <img class="mySlides" src="{{'product4.jpg'| asset_url}}" style="display:none">
           <button id="prev" class="slider-controll-icons prev" onclick="plusDivs(-1)">&#10094;</button>
           <button id="next" class="slider-controll-icons next" onclick="plusDivs(1)">&#10095;</button>
         </div>
