--- a/sections/cupon-videos.liquid
+++ b/sections/cupon-videos.liquid
@@ -10,7 +10,7 @@
       <div class="video-div1">
         <div class="video-wrapper">
           <video id="video1" muted>
-            <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+            <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay1">
             <p class="video-length">2:35</p>
@@ -25,7 +25,7 @@
       <div class="video-div2">
         <div class="video-wrapper">
           <video id="video2" muted>
-            <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+            <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay2">
             <p class="video-length">1:05</p>
@@ -40,7 +40,7 @@
       <div class="video-div3">
         <div class="video-wrapper">
           <video id="video3" muted>
-            <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+            <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay3">
             <p class="video-length">1:00</p>
