--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -17,7 +17,7 @@
     </div>
     <div class="values-video-wrapper">
       <video id="valuesVideo" muted>
-        <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="valuesVid">
+        <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" id="valuesVid">
       </video>
       <div class="video-controll-overlay" id="valuesOverlay">
         <div class="play-icon-wrapper" id="values-play">
