giftcards controll fix

--- a/sections/services-styles.liquid
+++ b/sections/services-styles.liquid
@@ -7,7 +7,7 @@
         <div class="video-card">
           <div class="video-wrapper">
             <video id="video1" muted>
-              <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+              <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay1">
               <div class="play-icon-wrapper video-section"id="play1">
@@ -23,7 +23,7 @@
         <div class="video-card">
           <div class="video-wrapper">
             <video id="video2" muted>
-              <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+              <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay2">
               <div class="play-icon-wrapper video-section"id="play2">
@@ -39,7 +39,7 @@
         <div class="video-card">
           <div class="video-wrapper">
             <video id="video3" muted>
-              <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+              <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay3">
               <div class="play-icon-wrapper video-section"id="play3">
@@ -55,7 +55,7 @@
         <div class="video-card">
           <div class="video-wrapper">
             <video id="video4" muted>
-              <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+              <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay4">
               <div class="play-icon-wrapper video-section"id="play4">
@@ -71,7 +71,7 @@
         <div class="video-card">
           <div class="video-wrapper">
             <video id="video5" muted>
-              <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" id="vid">
+              <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
             </video>
             <div class="video-controll-overlay" id="overlay5">
               <div class="play-icon-wrapper video-section"id="play5">
