--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -168,10 +168,9 @@
     </div>
   </div>
 </div>
+
 <script async
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
 </script>
-<script async
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap2">
-</script>
+
 {{ 'contact-controll.js'  | asset_url | script_tag     }}
