--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -87,7 +87,8 @@
           </li>
         {% endfor %}
         </ul>
-        <img src="{{'burger-menu.svg'| asset_url }}" alt="Open menu" class="burger-icon" onclick="openNav()">
+        <img id="blackBurger" src="{{'burger-menu.svg'| asset_url }}" alt="Open menu" class="burger-icon" onclick="openNav()">
+        <img id="whiteBurger" src="{{'burger-menuWhite.svg'| asset_url }}" alt="Open menu" class="burger-icon" onclick="openNav()">
       </div>
     </div>
     
