--- a/assets/barber-article.css
+++ b/assets/barber-article.css
@@ -133,7 +133,7 @@ display: none;
   display: flex;
 }
 .info-speaks ul li{
-  margin-right: 50px;
+  margin-right: 75px;
   font-family: Archivo Narrow,cursive;
   font-style: normal;
   font-weight: normal;
@@ -141,6 +141,9 @@ display: none;
   line-height: 150%;
   text-align: justify;
   color: #444444;
+}
+.info-speaks ul li::marker{
+  font-size: 16px;
 }
 .info-location{
   padding-left:40px;
@@ -167,7 +170,7 @@ display: none;
   grid-auto-rows: auto;
 }
 .galery-image-wrapper img{
-    object-fit: cover;
+    object-fit: fill;
     width: 360px;
     height: 360px;
     position: relative;
