--- a/assets/section-services.css
+++ b/assets/section-services.css
@@ -66,10 +66,12 @@
   margin-right: 40px;
   padding-top:50px;
   padding-bottom:50px;
+  
 }
 .service-image{
   width: 300px;
   height: 300px;
+  object-fit: cover;
 }
 .service-icon{
   width: 50px;
@@ -307,6 +309,7 @@
     width: 200px;
     height: 200px;
     margin-right: 20px;
+    object-fit: cover;
   }
   .service-icon{
     width: 35px;
