--- a/assets/section-values.css
+++ b/assets/section-values.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
+  background-color: rgba(108, 108, 108, 0.6);
 }
 .values-video-wrapper{
   max-width: 100%;
