--- a/sections/services-rules.liquid
+++ b/sections/services-rules.liquid
@@ -8,7 +8,7 @@
           <img class="rule-icon" src="{{'stopwatch.svg' | asset_url }}" alt="Stopwatch">
         </div>
         <h3 class="rule-heading">
-          LATE POLICY
+          {{ section.settings.rule1-title }}
         </h3>
         <p class="rule-link" id="latebtn">Learn More</p>
       </div>
@@ -17,7 +17,7 @@
           <img class="rule-icon" src="{{'calling.svg' | asset_url }}" alt="Calling">
         </div>
         <h3 class="rule-heading">
-          CANCELLATION POLICY
+          {{ section.settings.rule2-title }}
         </h3>
         <p class="rule-link" id="cancelbtn">Learn More</p>
       </div>
@@ -26,7 +26,7 @@
           <img class="rule-icon" src="{{'calendar.svg' | asset_url }}" alt="Calendar">
         </div>
         <h3 class="rule-heading">
-          NO SHOW POLICY
+          {{ section.settings.rule3-title }}
         </h3>
         <p class="rule-link" id="noshowbtn">Learn More</p>
       </div>
@@ -34,8 +34,8 @@
 
     <div id="lateModal" class="rules-modal">
       <div class="rules-modal-content">
-        <h3 class="rules-modal-title">LATE POLICY</h3>
-        <p class="rules-modal-text">If you are more then <strong>10 minutes late</strong> your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied. </p>
+        <h3 class="rules-modal-title">{{ section.settings.rule1-title }}</h3>
+        <p class="rules-modal-text">{{ section.settings.rule1-text }}</p>
         <div class="close">
           <img class="closeIcon" src="{{'close.svg'| asset_url }}" alt="close">
         </div>
@@ -44,8 +44,8 @@
 
     <div id="cancelModal" class="rules-modal">
       <div class="rules-modal-content">
-        <h3 class="rules-modal-title">CANCELLATION POLICY</h3>
-        <p class="rules-modal-text">If you are more then <strong>10 minutes late</strong> your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied. </p>
+        <h3 class="rules-modal-title">{{ section.settings.rule2-title }}</h3>
+        <p class="rules-modal-text">{{ section.settings.rule2-text }}</p>
         <div class="close">
           <img class="closeIcon" src="{{'close.svg'| asset_url }}" alt="close">
         </div>
@@ -54,8 +54,8 @@
 
     <div id="noshowModal" class="rules-modal">
       <div class="rules-modal-content">
-        <h3 class="rules-modal-title">NO SHOW POLICY</h3>
-        <p class="rules-modal-text">If you are more then <strong>10 minutes late</strong> your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied. </p>
+        <h3 class="rules-modal-title">{{ section.settings.rule3-title }}</h3>
+        <p class="rules-modal-text">{{ section.settings.rule3-text }}</p>
         <div class="close">
           <img class="closeIcon" src="{{'close.svg'| asset_url }}" alt="close">
         </div>
@@ -64,3 +64,51 @@
   </div>
 </div>
 {{ 'rules-controll.js'  | asset_url | script_tag     }}
+{% schema %}
+  {
+    "name": "Rules",
+    "settings": [
+      {
+        "id": "rule1-title",
+        "type": "text",
+        "label": "1st rule title",
+        "default":"LATE POLICY"
+      },
+      {
+        "id": "rule1-text",
+        "type": "richtext",
+        "label": "Rule 1 description",
+        "default":"<p>If you are more then 10 minutes late your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied.</p>"
+      },
+      {
+        "id": "rule2-title",
+        "type": "text",
+        "label": "2nd rule title",
+        "default":"CANCELLATION POLICY"
+      },
+      {
+        "id": "rule2-text",
+        "type": "richtext",
+        "label": "Rule 2 description",
+        "default":"<p>If you are more then 10 minutes late your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied.</p> "
+      },
+      {
+        "id": "rule3-title",
+        "type": "textarea",
+        "label": "3rd rule title",
+        "default":"NO SHOW POLICY"
+      },
+      {
+        "id": "rule3text",
+        "type": "richtext",
+        "label": "Rule 3 description",
+        "default":"<p>If you are more then 10 minutes late your appointment may be cancelled, as it’s not possible to give adequate service in the remaining time. If you are permanently late for your scheduled appointments, the Cancellation or No Show policies described below may be applied.</p> "
+      }
+    ],
+    "presets": [
+      {
+        "name": "Rules"
+      }
+    ]
+  }
+{% endschema %}
