--- a/sections/services-services.liquid
+++ b/sections/services-services.liquid
@@ -28,7 +28,7 @@
   {% if section.settings.haircut-1-show == true %}
   <div class="service-card">
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-1 | img_url: 'large': 'large' }}" alt="service1" class="service-image">
+      <img src="{{section.settings.haircut-image-1 | img_url: 'large' }}" alt="service1" class="service-image">
     </div>
     <div class="service-description-wrapper">
       <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
@@ -69,7 +69,7 @@
       <div class="circle-small"></div>
     </div>
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-1 | img_url: 'large': 'large' }}" alt="service1" class="service-image">
+      <img src="{{section.settings.haircut-image-1 | img_url: 'large' }}" alt="service1" class="service-image">
       <div class="service-description-wrapper">
         <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
         <h3 class="service-heading">{{ section.settings.haircut-name-1 }}</h3>
@@ -96,7 +96,7 @@
   {% if section.settings.haircut-2-show == true %}
   <div class="service-card">
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-2 | img_url: 'large': 'large' }}" alt="service2" class="service-image">
+      <img src="{{section.settings.haircut-image-2 | img_url: 'large' }}" alt="service2" class="service-image">
     </div>
     <div class="service-description-wrapper">
       <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
@@ -137,7 +137,7 @@
       <div class="circle-small"></div>
     </div>
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-2 | img_url: 'large': 'large' }}" alt="service2" class="service-image">
+      <img src="{{section.settings.haircut-image-2 | img_url: 'large' }}" alt="service2" class="service-image">
       <div class="service-description-wrapper">
         <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
         <h3 class="service-heading">{{ section.settings.haircut-name-2 }}</h3>
@@ -164,7 +164,7 @@
   {% if section.settings.haircut-3-show == true %}
   <div class="service-card">
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-3 | img_url: 'large': 'large' }}" alt="service3" class="service-image">
+      <img src="{{section.settings.haircut-image-3 | img_url: 'large' }}" alt="service3" class="service-image">
     </div>
     <div class="service-description-wrapper">
       <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
@@ -205,7 +205,7 @@
       <div class="circle-small"></div>
     </div>
     <div class="service-image-wrapper">
-      <img src="{{section.settings.haircut-image-3 | img_url: 'large': 'large' }}" alt="service3" class="service-image">
+      <img src="{{section.settings.haircut-image-3 | img_url: 'large' }}" alt="service3" class="service-image">
       <div class="service-description-wrapper">
         <img src="{{'servicesIcon.svg' | asset_url }}" alt="Service icon" class="service-icon">
         <h3 class="service-heading">{{ section.settings.haircut-name-3 }}</h3>
